kuber/micro-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {? {.Values.ingress.name: ''} : ''}
spec:
  rules:
  - host: {? {.Values.ingress.host: ''} : ''}
    http:
      paths:
      - path: {? {.Values.ingress.path: ''} : ''}
        pathType: Prefix
        backend:
          service:
            name: {? {.Values.ingress.backendService.name: ''} : ''}
            port:
              number: {? {.Values.ingress.backendService.port: ''} : ''}
